@@ -5,7 +5,7 @@ import net.neoforged.neoforge.common.ModConfigSpec;
 import java.util.Arrays;
 import java.util.List;
 
-public class CommonConfig {
+public class PBServerConfig {
 
     public static final ModConfigSpec SPEC;
 
@@ -24,6 +24,8 @@ public class CommonConfig {
     public static final ModConfigSpec.IntValue LOOT_STACK_MAX;
     public static final ModConfigSpec.ConfigValue<List<? extends String>> LOOT_WHITELIST;
     public static final ModConfigSpec.ConfigValue<List<? extends String>> LOOT_BLACKLIST;
+    public static final ModConfigSpec.ConfigValue<List<? extends String>> MOD_NAMESPACE_WHITELIST;
+    public static final ModConfigSpec.ConfigValue<List<? extends String>> MOD_NAMESPACE_BLACKLIST;
     public static final ModConfigSpec.BooleanValue USE_WHITELIST;
     public static final ModConfigSpec.IntValue ENCHANTED_BOOK_MAX_ENCHANTS;
     public static final ModConfigSpec.IntValue EQUIPMENT_MAX_ENCHANTS;
@@ -44,84 +46,68 @@ public class CommonConfig {
     static {
         ModConfigSpec.Builder builder = new ModConfigSpec.Builder();
 
-        builder.push("loots");
+        builder.comment("实体战利品").push("Entity Loot");
         EMERALD_DROP_MAX = builder
-                .translation("piggy_bank.configuration.emeraldDropMax")
+                .comment("每只生物最多掉落的绿宝石数量（0表示无上限）")
                 .comment("Maximum emeralds dropped per entity (0 = unlimited)")
                 .defineInRange("emeraldDropMax", 64, 0, Integer.MAX_VALUE);
         EMERALD_PER_DAMAGE = builder
-                .translation("piggy_bank.configuration.emeraldPerDamage")
-                .comment("Emeralds dropped per damage point (e.g., 2.0 = 1 emerald per 2 damage)")
-                .defineInRange("emeraldPerDamage", 2.0, 0.5, 10.0);
-
-        builder.push("porkchop");
+                .comment("造成多少伤害才能掉落一次绿宝石")
+                .comment("How much damage is required per Emerald drop?")
+                .defineInRange("emeraldPerDamage", 2.0, 0.5, Integer.MAX_VALUE);
         PORKCHOP_DROP_MIN = builder
-                .translation("piggy_bank.configuration.porkchopMinDrop")
+                .comment("死亡时最少掉落的生猪肉数量")
                 .comment("Minimum raw porkchops dropped on death")
-                .defineInRange("minDrop", 1, 0, 64);
+                .defineInRange("porkchopMinDrop", 1, 0, Integer.MAX_VALUE);
         PORKCHOP_DROP_MAX = builder
-                .translation("piggy_bank.configuration.porkchopMaxDrop")
+                .comment("死亡时最多掉落的生猪肉数量")
                 .comment("Maximum raw porkchops dropped on death")
-                .defineInRange("maxDrop", 3, 1, 64);
-        builder.pop();
-
-        builder.push("cooked_porkchop");
+                .defineInRange("porkchopMaxDrop", 3, 1, Integer.MAX_VALUE);
         COOKED_PORKCHOP_DROP_MIN = builder
-                .translation("piggy_bank.configuration.cookedPorkchopMinDrop")
+                .comment("被火焰击杀时最少掉落的熟猪排数量")
                 .comment("Minimum cooked porkchops dropped when killed by fire")
-                .defineInRange("minDrop", 1, 0, 64);
+                .defineInRange("cookedPorkchopMinDrop", 1, 0, Integer.MAX_VALUE);
         COOKED_PORKCHOP_DROP_MAX = builder
-                .translation("piggy_bank.configuration.cookedPorkchopMaxDrop")
+                .comment("被火焰击杀时最多掉落的熟猪排数量")
                 .comment("Maximum cooked porkchops dropped when killed by fire")
-                .defineInRange("maxDrop", 3, 1, 64);
+                .defineInRange("cookedPorkchopMaxDrop", 3, 1, Integer.MAX_VALUE);
         builder.pop();
 
-        builder.pop();
 
-
-        builder.push("extra_loot");
+        builder.comment("额外战利品").push("Extra Loot");
         LOOT_ENABLED = builder
-                .translation("piggy_bank.configuration.lootEnabled")
+                .comment("是否启用额外战利品掉落")
                 .comment("Enable extra loot drops")
-                .define("enabled", true);
+                .define("lootEnabled", true);
         LOOT_MIN_COUNT = builder
-                .translation("piggy_bank.configuration.lootMinCount")
+                .comment("每次死亡最少掉落的物品种类数")
                 .comment("Minimum number of item types dropped per death")
-                .defineInRange("minCount", 1, 1, 1);
+                .defineInRange("lootMinCount", 1, 1, Integer.MAX_VALUE);
         LOOT_MAX_COUNT = builder
-                .translation("piggy_bank.configuration.lootMaxCount")
+                .comment("每次死亡最多掉落的物品种类数")
                 .comment("Maximum number of item types dropped per death")
-                .defineInRange("maxCount", 8, 1, 120);
+                .defineInRange("lootMaxCount", 8, 1, Integer.MAX_VALUE);
         LOOT_STACK_MIN = builder
-                .translation("piggy_bank.configuration.lootStackMinSize")
+                .comment("每种物品最少掉落的数量")
                 .comment("Minimum stack size for each dropped item")
-                .defineInRange("stackMinSize", 1, 1, 64);
+                .defineInRange("lootStackMinSize", 1, 1, Integer.MAX_VALUE);
         LOOT_STACK_MAX = builder
-                .translation("piggy_bank.configuration.lootStackMaxSize")
+                .comment("每种物品最多掉落的数量")
                 .comment("Maximum stack size for each dropped item")
-                .defineInRange("stackMaxSize", 4, 1, 64);
+                .defineInRange("lootStackMaxSize", 4, 1, Integer.MAX_VALUE);
+        builder.comment("黑名单 & 白名单").push("Whitelist & Blacklist");
         USE_WHITELIST = builder
-                .translation("piggy_bank.configuration.useWhitelist")
+                .comment("是否使用白名单模式（true = 白名单，false = 黑名单）")
                 .comment("Use whitelist mode (true = whitelist, false = blacklist)")
                 .define("useWhitelist", false);
         LOOT_WHITELIST = builder
-                .translation("piggy_bank.configuration.lootWhitelist")
-                .comment("Whitelist item IDs (supports namespace IDs and regex)")
-                .defineList("whitelist",
-                        Arrays.asList(
-                                "minecraft:enchanted_book",
-                                "minecraft:gold_ingot",
-                                "minecraft:diamond.*"
-                        ),
-                        obj -> obj instanceof String);
+                .comment("白名单物品ID列表")
+                .comment("Whitelist item IDs")
+                .defineList("lootWhitelist", List.of(), obj -> obj instanceof String);
         LOOT_BLACKLIST = builder
-                .translation("piggy_bank.configuration.lootBlacklist")
-                .comment("Blacklist item IDs (supports namespace IDs and regex)",
-                        "Examples:",
-                        "- Single item: minecraft:barrier",
-                        "- Entire mod: modid:.* (e.g., create:.*)",
-                        "- Regex pattern: .*spawn_egg.* (matches all spawn eggs)")
-                .defineList("blacklist",
+                .comment("黑名单物品ID列表")
+                .comment("Blacklist item IDs")
+                .defineList("lootBlacklist",
                         Arrays.asList(
                                 ".*shulker_box",
                                 ".*boat.*",
@@ -132,49 +118,64 @@ public class CommonConfig {
                                 ".*horse_armor"
                         ),
                         obj -> obj instanceof String);
+        MOD_NAMESPACE_WHITELIST = builder
+                .comment("模组命名空间白名单")
+                .comment("Mod namespace whitelist")
+                .defineList("modNamespaceWhitelist", List.of(), obj -> obj instanceof String);
+        MOD_NAMESPACE_BLACKLIST = builder
+                .comment("模组命名空间黑名单")
+                .comment("Mod namespace blacklist")
+                .defineList("modNamespaceBlacklist", List.of(
+                        "geckolib"
+                ), obj -> obj instanceof String);
         ENCHANTED_BOOK_MAX_ENCHANTS = builder
-                .translation("piggy_bank.configuration.enchantedBookMaxEnchants")
+                .comment("附魔书最大附魔数量")
                 .comment("Maximum number of enchantments on enchanted books")
-                .defineInRange("enchantedBookMaxEnchants", 4, 1, 10);
+                .defineInRange("enchantedBookMaxEnchants", 5, 1, Integer.MAX_VALUE);
         EQUIPMENT_MAX_ENCHANTS = builder
-                .translation("piggy_bank.configuration.equipmentMaxEnchants")
+                .comment("装备最大附魔数量")
                 .comment("Maximum number of enchantments on equipment")
-                .defineInRange("equipmentMaxEnchants", 3, 1, 10);
+                .defineInRange("equipmentMaxEnchants", 3, 1, Integer.MAX_VALUE);
         builder.pop();
 
-        builder.push("world_spawn");
+        builder.pop();
+
+
+        builder.comment("世界生成").push("World Spawn");
         SPAWN_ENABLED = builder
-                .translation("piggy_bank.configuration.spawnEnabled")
+                .comment("是否启用自然生成")
                 .comment("Enable natural spawning")
-                .define("enabled", true);
+                .define("spawnEnabled", true);
         SPAWN_WEIGHT = builder
-                .translation("piggy_bank.configuration.spawnWeight")
-                .comment("Spawn weight (lower value = rarer spawns)")
-                .defineInRange("weight", 2, 1, 100);
+                .comment("生成权重")
+                .comment("Spawn weight")
+                .defineInRange("spawnWeight", 2, 1, 100);
         SPAWN_MIN_COUNT = builder
-                .translation("piggy_bank.configuration.spawnMinCount")
+                .comment("每次生成最少数量")
                 .comment("Minimum spawn count per group")
-                .defineInRange("minCount", 1, 1, 10);
+                .defineInRange("spawnMinCount", 1, 1, Integer.MAX_VALUE);
         SPAWN_MAX_COUNT = builder
-                .translation("piggy_bank.configuration.spawnMaxCount")
+                .comment("每次生成最多数量")
                 .comment("Maximum spawn count per group")
-                .defineInRange("maxCount", 1, 1, 10);
+                .defineInRange("spawnMaxCount", 1, 1, Integer.MAX_VALUE);
         builder.pop();
 
-        builder.push("spawner");
+
+        builder.comment("刷怪笼").push("Spawner");
         DISABLE_SPAWNER_PLACEMENT = builder
-                .translation("piggy_bank.configuration.disableSpawnerPlacement")
+                .comment("禁止将刷怪蛋放入刷怪笼")
                 .comment("Disable placing Piggy Bank spawn eggs in spawners")
                 .define("disableSpawnerPlacement", true);
         builder.pop();
 
-        builder.push("taming");
+
+        builder.comment("驯服").push("Taming");
         TAME_ITEM = builder
-                .translation("piggy_bank.configuration.tameItem")
+                .comment("用于驯服的物品")
                 .comment("Item used to tame the Piggy Bank")
                 .define("tameItem", "minecraft:amethyst_shard");
         TAME_SUCCESS_RATE = builder
-                .translation("piggy_bank.configuration.tameSuccessRate")
+                .comment("驯服成功率")
                 .comment("Success rate for taming")
                 .defineInRange("tameSuccessRate", 0.1, 0.0, 1.0);
         builder.pop();
